--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to Vue</title>
+  <title>Vue Electronic Calculator</title>
   <script src="asset/vue.min.js"></script>
   <link rel="stylesheet" href="asset/animate.min.css">
   <link rel="stylesheet" href="asset/bootstrap.min.css">
