Added github link to footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
     </div>
   </div>
-    <footer class="text-center">Created by <a class="hilight" href="https://www.linkedin.com/in/sarunyhot" target="_blank">Kao</a></footer>
+    <footer class="text-center">Created by <a class="hilight" href="https://www.linkedin.com/in/sarunyhot" target="_blank">Kao</a> | <a class="hilight" href="https://github.com/chenka/vue-calculator" target="_blank">Github</a></footer>
   </div>
   <script src="asset/app.js"></script>
 </body>
