Detect invalid format

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
   <div class="container" id="app">
+    <h1>{{evalText}}</h1>
   <div class="calculator well">
     <div class="name text-center"> ELECTRONIC CALCULATOR</div>
     <div class="screen text-right">
       <p class="sum animated" :class="{fadeIn: fadeIn}">{{sum}}</p>
-      <p class="formula">{{formulaText}}&nbsp;</p>
+      <p class="formula">{{historyText}}&nbsp;</p>
     </div>
     <div class="buttons" @click="calculate($event.target.value)">
       <button class="red long" value="ac">AC</button>
