--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
 <head>
   <title>Vue Electronic Calculator</title>
   <script src="asset/vue.min.js"></script>
+  <link rel="image_src" href="https://user-images.githubusercontent.com/837612/28257485-5f6e18bc-6af5-11e7-8027-579332a0168c.png" />
+  <meta property="og:image" content="https://user-images.githubusercontent.com/837612/28257485-5f6e18bc-6af5-11e7-8027-579332a0168c.png" />
   <link rel="stylesheet" href="asset/animate.min.css">
   <link rel="stylesheet" href="asset/bootstrap.min.css">
   <link rel="stylesheet" href="asset/app.css">
